Fix liquidity ratio calculation in deposit and add tests

--- a/tokens/token-swap/anchor/Anchor.toml
+++ b/tokens/token-swap/anchor/Anchor.toml
@@ -4,6 +4,9 @@
 resolution = true
 skip-lint = false
 
+[programs.localnet]
+swap_example = "AsGVFxWqEn8icRBFQApxJe68x3r9zvfSbmiEzYFATGYn"
+
 [programs.devnet]
 swap_example = "AsGVFxWqEn8icRBFQApxJe68x3r9zvfSbmiEzYFATGYn"
 
